# ZK-Chat

zk/: Cargo.toml  HARDENING_PATCH.md  README.md
zk/src/: lib.rs  main.rs  test_harness.rs
zk/src/websocket/: client.rs  mod.rs  protocol.rs  server.rs
zk/src/zk/: air.rs  hash.rs  mod.rs  prover.rs
zk/static/: app.js  index.html  tests.html  tests.js
zk/tests/: e2e_workflow.rs  integration_chain.rs  interleaving.rs  negative.rs  property_chain.rs  unit_hash.rs
