[package]
name = "zk_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
# Winterfell ZK-STARK library
winterfell = "0.9"

# WebSocket and async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
futures-util = "0.3"
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto and hashing
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"

# Logging and error handling
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding/decoding
hex = "0.4"
base64 = "0.21"

# Binary serialization
bincode = "1.3"

# Static initialization
once_cell = "1.19"

[dev-dependencies]
proptest = "1.0"

[[bin]]
name = "server"
path = "src/bin/server.rs"
